tests/paczka1/fuzzy1/26145032.err
Error in line 4: S962 A717 64,3
Error in line 2: aAFcp82c A643 73,5
Error in line 9: aAFcp82c A717 90,5
Error in line 23: BgbY8 S962 5,3
Error in line 33: ?A7(7
